<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_offsesion_modules"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Cerrar sesión" />
    <item
        android:id="@+id/item_salir_login"
        android:title="Salir" />
</menu>