...
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <ImageButton
        android:id="@+id/botongim_modulos"
        android:layout_width="158dp"
        android:layout_height="151dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@mipmap/icono_gim" />

    <ImageButton
        android:id="@+id/botoncompra_modulos"
        android:layout_width="156dp"
        android:layout_height="153dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
...
